# proof-of-space-continuity

./: .gitignore  .yarnrc.yml  Cargo.toml  README.md  create_fixed.js  demo-standardized-verification.js  example.js  example_prover_verifier.js  example_prover_verifier_backup.js  fix_all.js  fix_availability.js  fix_callbacks.js  index.d.ts  index.js  package-lock.json  package.json  production_verification.md  proof-of-work.win32-x64-msvc.node.bak  replace_callbacks.js  simple_fix.js  specification.md  test-hex-difficulty.js  test-runner.js  test_fix.js  test_mock.js  test_production_ready.js  vdf_timing_demo.js
.github/workflows/: CI.yml
__test__/: README.md  TEST_SUITE_OVERVIEW.md  index.spec.mjs  mock-callbacks.js  setup.js
__test__/attack/: protocol-attacks.test.js
__test__/edge-cases/: boundary-conditions.spec.mjs
__test__/helpers/: test-setup.mjs
__test__/integration/: chain-management.spec.mjs  data-streaming.spec.mjs  end-to-end.spec.mjs  end-to-end.test.js  proof-windows.spec.mjs
__test__/performance/: timing-requirements.test.js
__test__/production/: consensus-compliance.spec.mjs  file-persistence.spec.mjs  performance.spec.mjs
__test__/unit/: chunk-selection.spec.mjs  commitments.spec.mjs  constructor.spec.mjs  core-types.test.js  file-io.spec.mjs  utility-functions.test.js  validation.spec.mjs
docs/: BLOCKCHAIN_AGNOSTIC_IMPLEMENTATION_COMPLETE.md  COMPLETE_TEST_SYSTEM_STATUS.md  ENHANCED_IMPLEMENTATION_SUMMARY.md  FINAL_COMPLETION_STATUS.md  IMPLEMENTATION_COMPLETE.md  PRODUCTION_READINESS_STATUS.md  extended-proofs.md  extended-specification.md  proof.md
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src/chain/: hashchain.rs  lifecycle.rs  mod.rs  storage.rs
src/consensus/: chunk_selection.rs  commitments.rs  mod.rs  network_latency.rs  verification.rs
src/core/: availability.rs  errors.rs  file_encoding.rs  memory_hard_vdf.rs  mod.rs  types.rs  utils.rs  vdf_processor.rs
src/core/logging/: chain_state.rs  formatter.rs  mod.rs  network_logger.rs  performance.rs
src/hierarchy/: groups.rs  manager.rs  mod.rs  proofs.rs  regions.rs
