[package]
edition = "2021"
name = "proof-of-space-continuity"
version = "0.1.0"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
homepage = "https://github.com/DIG-Network/proof-of-space-continuity"
repository = "https://github.com/DIG-Network/proof-of-space-continuity"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi6", "async"] }
napi-derive = "2.12.2"

# Cryptography & Merkle Trees
sha2 = "0.10"
hex = "0.4"
rs_merkle = "1.4"  # Production-ready merkle tree implementation

# Fast Checksums & File Operations
crc = "3.0"        # Fast CRC32 checksums for file integrity
blake3 = "1.5"     # Ultra-fast cryptographic hashing (faster than SHA256)
memmap2 = "0.9"    # Memory-mapped files (solves Windows file access issues)
tempfile = "3.8"   # Safe temporary file operations

# Serialization & Data Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging (optional, useful for debugging)
log = "0.4"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols" 