[package]
edition = "2021"
name = "proof-of-storage-continuity"
version = "0.1.0"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
homepage = "https://github.com/DIG-Network/proof-of-space-continuity"
repository = "https://github.com/DIG-Network/proof-of-space-continuity"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi6", "async"] }
napi-derive = "2.12.2"

# Cryptography & Merkle Trees
sha2 = "0.10"
hex = "0.4"
rs_merkle = "1.4"  # Production-ready merkle tree implementation

# Fast Checksums & File Operations
crc = "3.0"        # Fast CRC32 checksums for file integrity
crc32fast = "1.4"  # High-performance CRC32 implementation
memmap2 = "0.9"    # Memory-mapped files (solves Windows file access issues)

# Parallel Processing
rayon = "1.7"      # Data parallelism for hierarchical processing

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # JSON serialization for statistics and results

# Error Handling
thiserror = "1.0"

# Logging (optional, useful for debugging)
log = "0.4"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols" 