[package]
edition = "2021"
name = "proof-of-storage-continuity"
version = "0.1.0"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
homepage = "https://github.com/DIG-Network/proof-of-space-continuity"
repository = "https://github.com/DIG-Network/proof-of-space-continuity"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi6", "async"] }
napi-derive = "2.12.2"

# Cryptography & Merkle Trees (conservative versions)
sha2 = "0.9"
sha3 = "0.9"       # SHA-3 family for additional hash diversity
blake3 = "1.3"     # Fast cryptographic hash function
hex = "0.4"
rs_merkle = "1.2"  # Production-ready merkle tree implementation
rand = "0.7"       # Random number generation for entropy
rand_chacha = "0.2" # ChaCha20 RNG for deterministic randomness
getrandom = "0.1"   # OS random number generation
ed25519-dalek = "1.0.1" # Ed25519 signatures for prover authentication  
hmac = "0.10"      # HMAC for key derivation

# Fast Checksums & File Operations
crc = "3.0"        # Fast CRC32 checksums for file integrity
memmap2 = "0.9"    # Memory-mapped files (solves Windows file access issues)

# Parallel Processing
rayon = "1.7"      # Data parallelism for hierarchical processing

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # JSON serialization for statistics and results

# Error Handling
thiserror = "1.0"

# Logging (conservative versions)
log = "0.4"
env_logger = "0.9"  # Environment-based logger configuration
chrono = { version = "0.4.19", features = ["serde"] }  # For timestamps
colored = "2.0"  # For colored console output

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols" 